# repetita-gravity

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
backend/repetita/: __init__.py  api.py  cli.py  global_semantic.py  global_verifier.py  metrics.py  models.py  openai_adapter.py  openai_rewrite.py  orchestrator.py  parser.py  pass_controller.py  pipeline.py  planner.py  reference_audit.py  server.py  similarity.py  transaction.py  verifier.py
docs/: demo-script.md  devpost-submission.md  evaluation-gates.md  method-v0.1.md  verification.md
frontend/: app.js  index.html  output.css  output.js  styles.css
sample-data/: adversarial-professional.md
schemas/: analysis-result.schema.json  family-adjudication.schema.json  family-transaction.schema.json  global-semantic-verification.schema.json  rewrite-proposal.schema.json  semantic-verification.schema.json
scripts/: build_static_demo.py
tests/: test_api.py  test_contracts.py  test_core.py  test_frontend_contract.py  test_frontend_output_contract.py  test_global_semantic.py  test_global_verifier.py  test_metrics.py  test_model_transactions.py  test_openai_adapter.py  test_transactions.py  visual-smoke.cjs
