[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "repetita-gravity"
version = "0.1.0"
description = "Conservative semantic consolidation engine"
requires-python = ">=3.12"

[project.scripts]
repetita = "repetita.cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]

